# glad-voting

./: .gitignore  README.md  pyproject.toml  simulated_dataset.ipynb
glad/: model.py  prior.py  typing.py
