[tool.poetry]
name = "glad-voting"
version = "0.1.0"
description = "GLAD implementation for data labeling."
authors = ["nemexur <alex.milogradsky@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7.3"
numpy = "^1.20.3"
jax = "^0.2.13"
jaxlib = "^0.1.66"
einops = "^0.3.0"
ggplot = "^0.11.5"
seaborn = "^0.11.1"
loguru = "^0.5.3"
alive-progress = "^1.6.2"
tfp-nightly = {extras = ["jax"], version = "^0.14.0-alpha.20210517"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b1"
ipython = "^7.23.1"
jupyterlab = "^3.0.15"
ipykernel = "^5.5.5"

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | _build
    | buck-out
    | build
    | dist
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
